# index.js
@@ -1,19 +1,39 @@
 const express = require('express');
-const app = express();
-const port = 9999;
+const mongoose = require('mongoose');
+require('dotenv').config();
 
-app.get('/', (req, res) => {
-    res.send('Hello World!');
+const userRoutes = require('./routes/userRoutes');
+const articleRoutes = require('./routes/articleRoutes');
+const tagRoutes = require('./routes/tagRoutes');
+
+const app = express();
+const port = process.env.PORT || 9999;
+
+// Middleware
+app.use(express.json());
+
+// Connect to MongoDB
+mongoose.connect(process.env.MONGODB_URI, {
+    useNewUrlParser: true,
+    useUnifiedTopology: true
+}).then(() => {
+    console.log('Connected to MongoDB');
+}).catch((error) => {
+    console.error('Error connecting to MongoDB:', error);
 });
 
-
-
+// Routes
+app.use('/users', userRoutes);
+app.use('/articles', articleRoutes);
+app.use('/tags', tagRoutes);
 
 // Import and use the Swagger configuration
 require('./swagger')(app);
 
-app.get('/', (req, res) => {
-    res.send('Hello World!');
+// Error handling middleware
+app.use((err, req, res, next) => {
+    console.error(err.stack);
+    res.status(500).json({ message: 'Something went wrong!' });
 });
 
 app.listen(port, () => {
